[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/PlasticItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/TextureProgress.tscn" type="PackedScene" id=2]
[ext_resource path="res://tileset_grass_green.png" type="Texture" id=3]
[ext_resource path="res://scenes/GlassItem.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/PaperItem.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/TrashSpawners/PlasticSpawner.gd" type="Script" id=6]
[ext_resource path="res://scripts/TrashSpawners/GlassSpawner.gd" type="Script" id=7]
[ext_resource path="res://scripts/TrashSpawners/PaperSpawner.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=1]
height = 26.0

[sub_resource type="CapsuleShape2D" id=2]
height = 26.0

[sub_resource type="CapsuleShape2D" id=3]
height = 26.0

[node name="TrashSpawners" type="Node2D"]

[node name="PlasticSpawner" type="Area2D" parent="." groups=["plastic_spawner"]]
position = Vector2( -62, 0 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}
garbage = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="PlasticSpawner"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 250, 52, 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlasticSpawner"]
modulate = Color( 1, 1, 1, 0.247059 )
position = Vector2( 1, 15 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="TextureProgress" parent="PlasticSpawner" instance=ExtResource( 2 )]
margin_left = -13.0
margin_top = -50.0
margin_right = 19.0
margin_bottom = -18.0

[node name="GlassSpawner" type="Area2D" parent="." groups=["glass_spawner"]]
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}
garbage = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="GlassSpawner"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 53, 250, 52, 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GlassSpawner"]
modulate = Color( 1, 1, 1, 0.247059 )
position = Vector2( 1, 15 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="TextureProgress" parent="GlassSpawner" instance=ExtResource( 2 )]
margin_left = -13.0
margin_top = -50.0
margin_right = 19.0
margin_bottom = -18.0

[node name="PaperSpawner" type="Area2D" parent="." groups=["paper_spawner"]]
position = Vector2( 62, 0 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}
garbage = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="PaperSpawner"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 107, 250, 51, 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PaperSpawner"]
modulate = Color( 1, 1, 1, 0.247059 )
position = Vector2( 1, 15 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="TextureProgress" parent="PaperSpawner" instance=ExtResource( 2 )]
margin_left = -13.0
margin_top = -50.0
margin_right = 19.0
margin_bottom = -18.0

[connection signal="body_entered" from="PlasticSpawner" to="PlasticSpawner" method="_on_PlasticSpawner_body_entered"]
[connection signal="body_exited" from="PlasticSpawner" to="PlasticSpawner" method="_on_PlasticSpawner_body_exited"]
[connection signal="body_entered" from="PaperSpawner" to="PaperSpawner" method="_on_PaperSpawner_body_entered"]
[connection signal="body_exited" from="PaperSpawner" to="PaperSpawner" method="_on_PaperSpawner_body_exited"]
